# cpp-training

./: .gitignore  .zshrc  Dockerfile  Makefile.template  README.md  TODO.md  run_env.sh  setup.sh
Week-1/Day-1/: Makefile  README.md
Week-1/Day-1/src/: main.cpp
Week-1/Day-2/: Makefile  README.md
Week-1/Day-2/src/: main.cpp
Week-1/Day-3/: README.md
Week-1/Day-3/src/: main.cpp
Week-1/Day-4/: Makefile  README.md
Week-1/Day-4/src/: main.cpp
Week-1/Day-5/: Makefile  README.md
Week-1/Day-5/src/: main.cpp
Week-1/Project-1/: .gitignore  Makefile  TODO.md  compile_flags.txt
Week-1/Project-1/include/: DataBase.hpp  Utils.hpp  authentication.hpp  prompt.hpp
Week-1/Project-1/src/: DataBase.cpp  authentication.cpp  main.cpp  prompt.cpp
Week-1/Project-1/tests/: AuthenticationTest.cpp  AuthenticationTest.hpp  ClientTest.hpp  DataBaseTest.cpp  TestSuite.cpp
Week-2/Day-1/: README.md  compile_flags.txt
Week-2/Day-1/assignment_1/: Makefile
Week-2/Day-1/assignment_1/src/: main.cpp
Week-2/Day-1/assignment_2/: Makefile
Week-2/Day-1/assignment_2/src/: main.cpp
Week-2/Day-2/: README.md  output.txt
Week-2/Day-2/assignment_1/: Makefile
Week-2/Day-2/assignment_1/src/: main.cpp
Week-2/Day-2/assignment_2/: Makefile
Week-2/Day-2/assignment_2/src/: main.cpp
Week-2/Day-3/: Makefile  README.md
Week-2/Day-3/src/: main.cpp
Week-2/Day-4/: Makefile
Week-2/Day-4/assignment_1/: Makefile
Week-2/Day-4/assignment_1/src/: main.cpp
Week-2/Day-4/assignment_2/: Makefile
Week-2/Day-4/assignment_2/src/: main.cpp
Week-2/Project-2/: .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  TODO.md  build-image.sh  compile_flags.txt  data.csv  run-docker.sh
Week-2/Project-2/Includes/: Accounts.hpp  Client.hpp  DataBase.hpp  Logging.hpp  Transactions.hpp  Utils.hpp
Week-2/Project-2/Logs/: log.txt
Week-2/Project-2/Resources/: .gitignore  .vimrc  .zshrc  compile_flags.txt
Week-2/Project-2/Scripts/: build-image.sh
Week-2/Project-2/Sources/: Account.proto  Authentication.cpp  Client.cpp  DataBase.cpp  Logging.cpp  Main.cpp  protoballs.cpp
Week-2/Project-2/Tests/: AuthenticationTest.cpp  AuthenticationTest.hpp  DataBaseTest.cpp  DataBaseTest.hpp  TestSuite.cpp  TestSuite.hpp
Week-2/Project-2/include/: Addressbook.pb.hpp  Definitions.hpp  Encryption.hpp
Week-2/Project-2/src/: Authentication.cpp
